XD-1027: Create script-based batch ItemProcessor